fix: add z-index for hover on pictures to be shown in combination with overlap text in header

--- a/styles/sass/_header.scss
+++ b/styles/sass/_header.scss
@@ -153,6 +153,7 @@ header{
     justify-self: center;
     align-self: center;
     position: relative;
+    z-index: 21;
 
     img{
         width: 10vw;
@@ -237,6 +238,7 @@ header{
     justify-self: center;
     align-self: center;
     position: relative;
+    z-index: 9;
 
     img{
         width: 10vw;
@@ -265,6 +267,7 @@ header{
     justify-self: center;
     align-self: center;
     position: relative;
+    z-index: 8;
 
     img{
         width: 10vw;
@@ -293,6 +296,7 @@ header{
     justify-self: center;
     align-self: center;
     position: relative;
+    z-index: 7;
 
     img{
         width: 10vw;
@@ -321,6 +325,7 @@ header{
     justify-self: center;
     align-self: center;
     position: relative;
+    z-index: 6;
 
     img{
         width: 10vw;
@@ -376,6 +381,7 @@ header{
     color: $primaryYellow;    
     text-transform: uppercase;
     animation: updown 2s ease-in-out 0s infinite alternate;
+    z-index: -5;
 
     span{
         font-size: 0.6rem;
