--- a/styles/styles.css
+++ b/styles/styles.css
@@ -264,6 +264,7 @@ header {
       -ms-grid-row-align: center;
       align-self: center;
   position: relative;
+  z-index: 21;
 }
 
 .brian img {
@@ -366,6 +367,7 @@ header {
       -ms-grid-row-align: center;
       align-self: center;
   position: relative;
+  z-index: 9;
 }
 
 .stefan img {
@@ -400,6 +402,7 @@ header {
       -ms-grid-row-align: center;
       align-self: center;
   position: relative;
+  z-index: 8;
 }
 
 .nick img {
@@ -434,6 +437,7 @@ header {
       -ms-grid-row-align: center;
       align-self: center;
   position: relative;
+  z-index: 7;
 }
 
 .stephanie img {
@@ -468,6 +472,7 @@ header {
       -ms-grid-row-align: center;
       align-self: center;
   position: relative;
+  z-index: 6;
 }
 
 .ilya img {
@@ -537,6 +542,7 @@ header {
   text-transform: uppercase;
   -webkit-animation: updown 2s ease-in-out 0s infinite alternate;
           animation: updown 2s ease-in-out 0s infinite alternate;
+  z-index: -5;
 }
 
 .cta span {
@@ -998,9 +1004,6 @@ header {
 }
 
 .sign_up form .select_dinos .description {
-  height: 50px;
-  background-color: #50C78D;
-  font-size: 20px;
   -webkit-box-sizing: border-box;
           box-sizing: border-box;
   padding: 10px;
